k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-cat-k8s
  labels:
    app: demo-cat-k8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-cat-k8s
  template:
    metadata:
      labels:
        app: demo-cat-k8s
    spec:
      containers:
        - name: demo-cat-k8s
          image: alexanderi/demo-cat-k8s:1.0.0
          ports:
            - containerPort: 8080
