k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-cat-k8s
spec:
  selector:
    app: demo-cat-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
